# AStarPathTracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  TodoList.md  TodoList.txt
EngineRuntime/AssetSources/: Math.glsl  sample.rchit  sample.rchit.spv  sample.rgen  sample.rgen.spv  sample.rmiss.spv
EngineRuntime/AssetSources/Shaders/: Common.glsl  Math.glsl  RayClosestHitCommon.glsl  sample-light.rchit  sample-light.rchit.spv  sample.rchit  sample.rchit.spv  sample.rgen  sample.rgen.spv  sample.rmiss  sample.rmiss.spv  shader-complier.ps1
EngineRuntime/AssetSources/Shaders/Includes/: Common.glsl  Math.glsl  RayClosestHitCommon.glsl  Sampling.glsl
EngineRuntime/AssetSources/Shaders/Sources/: Dielectric.rchit  Diffuse.rchit  Lambert.rchit  Light.rchit  PureReflection.rchit  RayGenerator.rgen  SkyBox.rmiss
EngineRuntime/Resources/Materials/: M_CornellBox_GreenWall.json  M_CornellBox_InnerBox.json  M_CornellBox_Light.json  M_CornellBox_OuterBox.json  M_CornellBox_RedWall.json  M_Dielectric.json  M_PureReflection.json  M_SampleSimpleLit.json  M_XAxis.json  M_YAxis.json  M_ZAxis.json  SampleMaterialLight.json  SampleMaterialSimpleLit.json  SimpleLitShaderRchit.json  SimpleLitShaderRgen.json  SimpleLitShaderRmiss.json  XAxisMaterial.json  YAxisMaterial.json  ZAxisMaterial.json
EngineRuntime/Resources/Meshes/: MeshCornellBox.json  MeshObj.json  MeshQuad.json
EngineRuntime/Resources/Shaders/: S_RCHit_Dielectric.json  S_RCHit_Diffuse.json  S_RCHit_Light.json  S_RCHit_PureReflection.json  S_RGen_Main.json  S_RMiss_Main.json
EngineRuntime/Resources/Textures/: SampleTexture.json
includes/Application/: GlfwWindow.h  Materials.h  RendererApplication.h  RendererDeviceContextCreateConfig.h  RendererPresenter.h  Systems.h  World.h
includes/Application/Renderer/: CommandUtilities.h  MaterialPool.h  MeshPool.h  RenderContext.h  Renderer.h  RendererApplication.h  RendererDeviceContextCreateConfig.h  RendererPipeline.h  TexturePool.h
includes/Core/: Buffer.h  DataManager.h  DeviceContext.h  EngineDebugger.h  Image.h  Instance.h  Mesh.h  Object.h  RayTracingShaderBindingTable.h  RayTracingShaders.h  Scene.h  Shader.h  Surface.h  Swapchain.h  TemporaryCommandBufferPool.h  VulkanUsages.h  VulkanUtils.h  Window.h
includes/Core/ModelLoader/: ObjLoader.h
includes/Editor/: EditorApplication.h  EditorDeviceContextCreateConfig.h  EditorRenderContext.h  EditorSelection.h  EditorUI.h  EditorUIDrawer.h
includes/Editor/UI/: FileBrowser.h  HierarchiesPanel.h  ImGuiFileDialog.h  ImGuiFileDialogConfig.h  ImGuiX.h  ResourcesPanel.h  TreeViewUtilities.h  ViewportPanel.h
includes/Editor/UI/Inspectors/: ComponentInspector.h  EditorInspector.h  ResourceEditorRegistry.h  (+1 more)
includes/Engine/: Guid.h  HostBuffer.h  HostShaderManager.h  InputSystem.h  ShaderHostBuffer.h  StaticRegistry.h
includes/Engine/Components/: Camera.h  JsonSerialize.h  Name.h  Render.h  Transform.h
includes/Engine/Json/: Components.h  Glm.h  Guid.h  Resource.h
includes/Engine/Resources/: JsonSerializer.h  ObjResourceData.h  ResourceData.h  ResourceRegistry.h  Resources.h  ResourcesManager.h  TextureResourceData.h
includes/Utilities/: Algorithm.h  EnumX.h  JsonX.h  MacroUtilities.h  ReflectionX.h  Singleton.h
plugins/nsight-aftermath/: CMakeLists.txt
plugins/nsight-aftermath/wrapper/: NsightAftermathHelpers.h
shaders/: Common.glsl  sample.rchit  sample.rchit.spv  sample.rgen  sample.rgen.spv  sample.rmiss  sample.rmiss.spv  sample.vert  sample.vert.spv  shader-complier.bat  shader-complier.ps1
source/: acceleration-structure.cpp  acceleration-structure.h  algorithm-util.h  buffer-facroty.h  buffer-factory.cpp  buffer.cpp  buffer.h  config.h  debugger.cpp  debugger.h  event-registry.h  file-system.cpp  file-system.h  main-window.cpp  main-window.h  main.cpp  math-utils.cpp  math-utils.h  mesh.cpp  mesh.h  model-loader.cpp  model-loader.h  temporary-command-buffer.cpp  temporary-command-buffer.h  vertex.cpp  vertex.h  vk-debugger.cpp  vulkan-app-commands.cpp  vulkan-app-device.cpp  vulkan-app-draw-frame.cpp  vulkan-app-frame-buffers.cpp  vulkan-app-graphics-pipeline.cpp  vulkan-app-instance.cpp  vulkan-app-ray-tracing.cpp  vulkan-app-swap-chain.cpp  vulkan-app.cpp  vulkan-app.h  vulkan-utils.cpp  vulkan-utils.h
sources/: acceleration-structure.cpp  acceleration-structure.h  algorithm-util.h  main-window.cpp  main-window.h  main.cpp  math-utils.h  ray-tracing-shader-binding-table.cpp  ray-tracing-shader-binding-table.h  vulkan-app-draw-frame.cpp  vulkan-app-graphics-pipeline.cpp  vulkan-app-swap-chain.cpp  vulkan-app.cpp  vulkan-app.h
sources/Application/: GlfwWindow.cpp  Materials.cpp  RendererApplication.cpp  RendererPresenter.cpp  Systems.cpp  World.cpp
sources/Application/NsightAftermath/: NsightAftermathGpuCrashTracker.cpp  NsightAftermathGpuCrashTracker.h  NsightAftermathHelpers.h  NsightAftermathShaderDatabase.cpp  NsightAftermathShaderDatabase.h
sources/Application/Renderer/: MaterialPool.cpp  MeshPool.cpp  RenderContext.cpp  Renderer.cpp  RendererApplication.cpp  RendererPipeline.cpp  TexturePool.cpp
sources/Core/: Buffer.cpp  Buffer.cppm  Buffer.hppm  Core.cppm  DeviceContext.cpp  DeviceContext.cppm  DeviceContext.hppm  EngineDebugger.cpp  EngineDebugger.cppm  Image.cpp  Mesh.cpp  RayTracingShaderBindingTable.cpp  RayTracingShaders.cpp  RenderContext.cpp  Surface.cpp  Swapchain.cpp  TemporaryCommandBufferPool.cpp  TemporaryCommandBufferPool.cppm  VulkanUsages.cpp  VulkanUsages.cppm  Window.cppm
sources/Core/ModelLoader/: ObjLoader.cpp
sources/Editor/: EditorApplication.cpp  EditorRenderContext.cpp  EditorSelection.cpp  EditorUI.cpp  EditorUIDrawer.cpp
sources/Editor/UI/: FileBrowser.cpp  HierarchiesPanel.cpp  ImGuiFileDialog.cpp  ResourcesPanel.cpp  TreeViewUtilities.cpp  ViewportPanel.cpp
sources/Engine/: ShaderHostBuffer.cpp
sources/Engine/Components/: ComponentInspectors.cpp
sources/Engine/Json/: Components.cpp
sources/Engine/Resources/: ObjResourceData.cpp  Resource.cpp  ResourceData.cpp  ResourcesManager.cpp  TextureResourceData.cpp
(+12 files in other folders)
