cmake_minimum_required(VERSION 3.21)

set(NSIGHT_AFTERMATH_SDK ${CMAKE_CURRENT_LIST_DIR})
set(NsightAftermath_VERSION 0.1)
set(NSIGHT_AFTERMATH_PROJECT_NAME NsightAftermath)

project(
    ${NSIGHT_AFTERMATH_PROJECT_NAME}
    VERSION ${NsightAftermath_VERSION}
    LANGUAGES C CXX
)

if(WIN32 OR UNIX)
  find_path(NsightAftermath_INCLUDE_DIR
    NAMES GFSDK_Aftermath.h
    PATHS
      "${NSIGHT_AFTERMATH_SDK}/include"
    )

  if(CMAKE_SIZEOF_VOID_P EQUAL 8)
    find_library(NsightAftermath_LIBRARY
      NAMES GFSDK_Aftermath_Lib.x64
      PATHS
        "${NSIGHT_AFTERMATH_SDK}/lib/x64"
        NO_SYSTEM_ENVIRONMENT_PATH
        )
  elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
    find_library(NsightAftermath_LIBRARY
      NAMES GFSDK_Aftermath_Lib.x86
      PATHS
        "${NSIGHT_AFTERMATH_SDK}/lib/x86"
        NO_SYSTEM_ENVIRONMENT_PATH
        )
  endif()
else()
    find_path(NsightAftermath_INCLUDE_DIR
      NAMES GFSDK_Aftermath.h
      PATHS
        "${NSIGHT_AFTERMATH_SDK}/include")
    find_library(NsightAftermath_LIBRARY
      NAMES GFSDK_Aftermath_Lib
      PATHS
        "${NSIGHT_AFTERMATH_SDK}/lib")
endif()

set(NSIGHT_AFTERMATH_LIBRARIES ${NsightAftermath_LIBRARY})
set(NSIGHT_AFTERMATH_INCLUDE_DIRS ${NsightAftermath_INCLUDE_DIR})
get_filename_component(NSIGHT_AFTERMATH_LIB_DIR ${NSIGHT_AFTERMATH_LIBRARIES} DIRECTORY)
file(GLOB NSIGHT_AFTERMATH_DLL "${NSIGHT_AFTERMATH_LIB_DIR}/*.dll")

add_library(${NSIGHT_AFTERMATH_PROJECT_NAME} SHARED IMPORTED GLOBAL)
add_library(${NSIGHT_AFTERMATH_PROJECT_NAME}::${NSIGHT_AFTERMATH_PROJECT_NAME} ALIAS ${NSIGHT_AFTERMATH_PROJECT_NAME})

set_target_properties(${NSIGHT_AFTERMATH_PROJECT_NAME} PROPERTIES 
    IMPORTED_LOCATION ${NSIGHT_AFTERMATH_DLL}
    IMPORTED_IMPLIB  ${NsightAftermath_LIBRARY}
    INTERFACE_INCLUDE_DIRECTORIES ${NSIGHT_AFTERMATH_INCLUDE_DIRS}
)

file(COPY ${NSIGHT_AFTERMATH_DLL} DESTINATION ${CMAKE_BINARY_DIR})
